[package]
name = "qrcode-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0" }
qrcode = { version = "0.12.0", features = ["image"] }
image = { version = "0.23" }
base64 = "0.21.0"
